# Portfolio

./: Home.py  README.md  data.csv  main.py  pyproject.toml  send_email.py
pages/: Contakt_me.py
